fb temp fix