@@ -52,12 +52,12 @@ public class FallbackLocaleProviderAdapter extends JRELocaleProviderAdapter {
     @Override
     protected Set<String> createLanguageTagSet(String category) {
         return switch (category) {
-            case "BreakIteratorInfo", "BreakIteratorRules", "CollationData" -> {
-                // ensure to include en-US/en/ROOT
-                var s = new HashSet<>(super.createLanguageTagSet(category));
-                s.addAll(Set.of("en-US", "en", "und"));
-                yield Collections.unmodifiableSet(s);
-            }
+//            case "BreakIteratorInfo", "BreakIteratorRules", "CollationData" -> {
+//                // ensure to include en-US/en/ROOT
+//                var s = new HashSet<>(super.createLanguageTagSet(category));
+//                s.addAll(Set.of("en-US", "en", "und"));
+//                yield Collections.unmodifiableSet(s);
+//            }
             case "FormatData" -> Set.of("ja", "und");
             default -> Set.of("und");
         };
